set conditional symbol

--- a/build.toml
+++ b/build.toml
@@ -5,6 +5,15 @@ archive_location = '\\nirvana\temp\vs_cds\slsc_12201_custom_device'
 [projects.cd]
 path = 'Source\SLSC-12201 DIO.lvproj'
 
+[[codegen.steps]]
+name = 'Set Conditional Symbol'
+type = 'lvSetConditionalSymbol'
+project = '{cd}'
+symbol = 'CD_Version'
+true_value = '2015_2016'
+false_value = 'Default'
+condition = 'lvVersion < 2017'
+
 [[build.steps]]
 name = 'Build SLSC-12201 DIO Custom Device'
 type = 'lvBuildAll'
