--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: ni-slsc12201-veristand-{veristand_version}-support
 Version: {nipkg_version}
-Architecture: windows_x64
+Architecture: windows_all
 Maintainer: National Instruments <support@ni.com>
 XB-Plugin: file
 Description: Provides support for the NI SLSC-12201 DIO custom device for NI VeriStand {veristand_version}.
