Update test config (#17)
* Update test config file with host names
* Updated System Definition and min version to 2017

--- a/Source/Tests/System/Assets/config.ini
+++ b/Source/Tests/System/Assets/config.ini
@@ -1,5 +1,5 @@
 [Overrides]
-"Targets/Controller/Custom Devices/SLSC/NI SLSC-12001/user.CD.Chassis IP Address" = "10.2.104.19"
+"Targets/Controller/Hardware/SLSC/SLSC Chassis/Chassis ID" = "VS-Eco-SLSC-12001"
 
 [Properties]
-"Loopback Resource Name" = "rio://10.2.104.27/RIO0"
+"Loopback Resource Name" = "rio://VS-Eco-Slave-8880/RIO0"
